Bug fixes
General:
- Remove 1px white line on the Nautilus' desktop and file pane
- Add a border between Gedit's edit window and status bar
- Transparentize $text_color a little more to make the difference between it and $fg_color more obvious
- Fixed some issues with headerbar buttons, the most obvious was the stackswitcher moving about when interacted with because of an invisible border
- Treeview header buttons doesn't use the darker bottom border color
- Popover checks and radios uses the same styling as ones in context menus
- Make the levelbar blocks less ugly
- Finetune the look of normal-alt and hover-alt buttons
- Pathbar buttons have a common background color so they don't look as disjointed
- Fix switch backdrop issues

Dark theme:
- Correct backdrop state for gtkscale slider
- Use padding-box for gtkscale slider
- $dark_fill use for switch and scale is consistent

Closes issues #55 #50

--- a/Communitheme/gtk-3.0/_apps.scss
+++ b/Communitheme/gtk-3.0/_apps.scss
@@ -23,16 +23,16 @@ list.tweak-categories separator {
   // makes nautilus tabs look much nicer
     border: none
   }
-}
 
-.nautilus-desktop-window {
-  // get rid of white line on the desktop
-  // a 1px white line is shown at the top of the desktop if desktop icons are enabled
   .searchbar-container searchbar {
+    // get rid of a 1px white line shown at the top of the window
+    // applies to the desktop too
     background: transparent;
     border-color: transparent;
   }
+}
 
+.nautilus-desktop-window {
   .nautilus-desktop.view {
     // use white text for desktop icons
     // otherwise it uses the variant dependent grey or white text color
@@ -161,4 +161,13 @@ buttonbox.horizontal.linked button.toggle.toolbar-primary-buttons-software {
   min-width: 80px;
   margin-left: 4px;
   margin-right: 4px;
+}
+
+/***********
+ * Gedit *
+ ***********/
+
+.gedit-bottom-panel-paned ~ statusbar {
+  // give gedit's bottom panel a border
+  border-top: 1px solid $borders_color;
 }
